--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700&display=swap"
+    rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap -->
@@ -21,7 +24,7 @@
         <!-- Nav tabs -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a href="#"><img class="navbar-logo" src="./img/logo-logo.png" alt=""></a>
+                <a href="#"><img class="navbar-logo" src="./img/logo-logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,130 +32,107 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav menu">
                         <li class="nav-item">
-                            <a class="nav-link active"href="#">Inicio</a>
+                            <a class="nav-link active" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="./templates/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
+                            <a class="nav-link" href="./templates/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="./templates/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./templates/login.html">Iniciar Sesión <i
+                                    class="bi bi-person"></i></a>
                         </li>
                     </ul>
                 </div>
-                <ul class="navbar-nav navbar-login">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Iniciar Sesión <i class="bi bi-person"></i></a>
-                    </li>
-                </ul>
             </div>
         </nav>
-
-        <!-- Tab panes -->
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="tab1Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab2Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab3Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab4Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab5Id" role="tabpanel"></div>
-        </div>
-
-        <!-- (Optional) - Place this js code after initializing bootstrap.min.js or bootstrap.bundle.min.js -->
-        <script>
-            var triggerEl = document.querySelector('#navId a')
-            bootstrap.Tab.getInstance(triggerEl).show() // Select tab by name
-        </script>
-
-
-        <!-- Tab panes -->
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="tab1Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab2Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab3Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab4Id" role="tabpanel"></div>
-            <div class="tab-pane fade" id="tab5Id" role="tabpanel"></div>
-        </div>
-
-        <!-- (Optional) - Place this js code after initializing bootstrap.min.js or bootstrap.bundle.min.js -->
-        <script>
-            var triggerEl = document.querySelector('#navId a')
-            bootstrap.Tab.getInstance(triggerEl).show() // Select tab by name
-        </script>
-
     </header>
-    <main>
+    <main class="inicio">
         <div class="banner">
-            <div>
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis suscipit doloremque, dolore
-                    ratione
-                    optio at non molestiae id. In labore nesciunt recusandae harum consequuntur at odit totam deleniti
-                    dignissimos. Fugiat?</h4>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt modi, officiis ipsa, id dolorem
-                    possimus doloremque unde delectus doloribus iure atque sint eos quibusdam aspernatur aliquid odio
-                    fuga
-                    ad veritatis?
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, similique, exercitationem
-                    accusantium
-                    eligendi soluta natus sint qui quibusdam amet, dolorum eum fuga cumque libero enim consequuntur non
-                    adipisci odit ipsum?
-                </h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1>Ofrecemos la mejor experiencia de <strong>conexión</strong> del país</h1>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="mb-4">¿En qué podemos ayudarte?</h4>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Escribí tu consulta"
+                                aria-label="Search">
+                            <button class="btn btn-color" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
-            <div class="seccion" id="seccion1">
-                <div class="item">
-                    <img class="img" class="" src="./img/inicio/undraw_online_re_x00h.svg" alt="">
+            <div class="seccion row">
+                <div class="item col-md-6">
+                    <img class="img img-fluid" src="./img/inicio/undraw_online_re_x00h.svg" alt="">
                 </div>
-                <div class="texto main-texto item">
-                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi dolores aliquam aut,
-                        consequatur placeat nobis suscipit distinctio itaque optio. Iusto facere dicta, reiciendis nisi
-                        quaerat accusamus aliquam? Provident, ipsam alias.
-                        Dicta, unde. Debitis, et minima. Corporis id dolor tenetur, minima at eaque aliquam ullam
-                        aspernatur iste nam optio minus expedita ex perferendis quisquam hic sint! Ab vel cumque numquam
-                        fuga.
-                    </p>
-                </div>
-            </div>
-            <div class="seccion">
-                <div class="texto main-texto item">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi dolores aliquam aut,
-                        consequatur placeat nobis suscipit distinctio itaque optio. Iusto facere dicta, reiciendis nisi
-                        quaerat accusamus aliquam? Provident, ipsam alias.
-                        Dicta, unde. Debitis, et minima. Corporis id dolor tenetur, minima at eaque aliquam ullam
-                    </p>
-                </div>
-                <div class="">
-                    <img class="img" class="seccion item" src="./img/inicio/undraw_video_game_night_8h8m.svg" alt="">
+                <div class="main-texto col-md-6">
+                    <div>
+                        <h3>Velocidad y estabilidad</h3>
+                        <p>En Connect sabemos que la velocidad y estabilidad son fundamentales para tus necesidades de
+                            telecomunicación. Nuestro compromiso es brindarte un servicio excepcional que te permita
+                            mantener vida personal conectada sin interrupciones. Con una infraestructura de vanguardia y
+                            tecnología de última generación, garantizamos una experiencia fluida y confiable.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="seccion">
-                <div class="item">
-                    <img class="img" class="seccion" src="./img/inicio/undraw_cloud_hosting_7xb1.svg" alt="">
+            <div class="seccion row align-items-center">
+                <div class="main-texto col-md-6">
+                    <div>
+                        <h3>Baja latencia ideal para juegos y tareas que necesiten rápidas respuestas</h3>
+                        <p>En Connect, entendemos la importancia de una baja latencia cuando se trata de juegos.Sabemos
+                            que cada milisegundo cuenta y puede marcar la diferencia entre la victoria y la derrota, el
+                            éxito y la frustración.
+                            Además de los juegos, reconocemos que hay tareas profesionales y de negocios que también
+                            requieren una respuesta instantánea. Con nuestra baja latencia, podrás trabajar en tiempo
+                            real, colaborar con colegas en diferentes ubicaciones y acceder a aplicaciones en la nube
+                            sin demoras molestas.
+                        </p>
+                    </div>
                 </div>
-                <div class="texto main-texto item">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi dolores aliquam aut,
-                        consequatur placeat nobis suscipit distinctio itaque optio. Iusto facere dicta, reiciendis nisi
-                        quaerat accusamus aliquam? Provident, ipsam alias.
-                        Dicta, unde. Debitis, et minima. Corporis id dolor tenetur, minima at eaque aliquam ullam
-                        aspernatur iste nam optio minus expedita ex perferendis quisquam hic sint! Ab vel cumque numquam
-                        fuga.</p>
+                <div class="col-md-6">
+                    <img class="img img-fluid" class="seccion item" src="./img/inicio/undraw_video_game_night_8h8m.svg"
+                        alt="">
+                </div>
+            </div>
+            <div class="seccion row">
+                <div class="item col-md-6">
+                    <img class="img img-fluid" class="seccion" src="./img/inicio/undraw_cloud_hosting_7xb1.svg" alt="">
+                </div>
+                <div class="main-texto col-md-6">
+                    <div>
+                        <h3>Soluciones informáticas avanzadas: cloud computing, servidores a medida y más</h3>
+                        <p>En Connect, nos enorgullecemos de ofrecer una amplia gama de servicios de
+                            soluciones informáticas diseñados para impulsar tu negocio hacia el éxito en el mundo
+                            digital. Nuestro equipo altamente capacitado de expertos en tecnología trabaja
+                            incansablemente para proporcionarte soluciones personalizadas y eficientes que satisfagan
+                            tus necesidades específicas.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
         <div>
-            <img class="footer-logo" src="./img/logo-logo.png" alt="">
+            <img class="footer-logo" src="./img/logo-logo.svg" alt="logo">
             <p>Logo ©2023 - Todos los derechos reservados</p>
         </div>
-        <div">
+        <div>
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
-            </div>
+        </div>
     </footer>
 
 
