Responsive en todas las páginas y algunos arreglos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,10 +42,10 @@
                             <a class="nav-link" href="./templates/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./templates/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./templates/login.html">Iniciar Sesión <i
+                            <a class="nav-link m-0" href="./templates/login.html">Iniciar Sesión <i
                                     class="bi bi-person"></i></a>
                         </li>
                     </ul>
