--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <div class="navbar_imagotipo">
-                    <a href="#"><img class="navbar-isotipo" src="../img/isotipo.svg" alt="isotipo"></a>
-                    <a href="#"><img class="navbar-logotipo" src="../img/logotipo.svg" alt="logotipo"></a>
+                    <a href="#"><img class="navbar-isotipo" src="./img/isotipo.svg" alt="isotipo"></a>
+                    <a href="#"><img class="navbar-logotipo" src="./img/logotipo.svg" alt="logotipo"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,7 +154,7 @@
 
     <footer>
         <div class="copy">
-            <img class="mb-1" src="../img/default-monochrome-footer.svg" alt="logotipo gris">
+            <img class="mb-1" src="./img/default-monochrome-footer.svg" alt="logotipo gris">
             <p>Connect ©2023</p>
             <p>Todos los derechos reservados</p>
         </div>
